<resources>
    <string name="app_name">CanaryAndroid</string>
    <string name="Delete_Config_Button">Delete Selected Configs</string>
    <string name="transport_load_config">Directory Selected for Test</string>
    <string name="how_many_times_do_you_want_to_run_the_test">How many times do you want to run the test?</string>
    <string name="run_log">Run Log:</string>
    <string name="browse">Choose Directory</string>
    <string name="sample_config">Create Sample Config</string>
    <string name="run_test">Run Test</string>
    <string name="textview">TextView</string>
    <string name="show_test_results">Show Results</string>
    <string name="no_directory_selected_yet">Select a directory</string>
    <string name="select_config">Select Config</string>
    <string name="return_home">Return Home</string>
    <string name="title_activity_save_new_config">SaveNewConfig</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="times_to_run_test">Times to run test:</string>
    <string name="view_results">View Results</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="please_name_this_config">Please Name This Config</string>
    <string name="hint">ExampleCanaryShadowConfigName</string>
    <string name="cancel">Cancel</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="use_selected_configs">Use Selected Configs</string>
    <string name="please_select_a_config_file">Please select a config file:</string>
</resources>