<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveNewConfig">

    <TextView
        android:id="@+id/config_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/please_name_this_config"
        android:textSize="25dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/filename_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/hint"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_name_prompt" />

    <Button
        android:id="@+id/cancel_new_config_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/save_new_config_button"
        app:layout_constraintStart_toStartOf="@+id/filename_input"
        app:layout_constraintTop_toBottomOf="@+id/filename_input" />

    <Button
        android:id="@+id/save_new_config_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save_and_continue"
        app:layout_constraintEnd_toEndOf="@id/filename_input"
        app:layout_constraintStart_toEndOf="@+id/cancel_new_config_button"
        app:layout_constraintTop_toBottomOf="@+id/filename_input" />

</androidx.constraintlayout.widget.ConstraintLayout>